--- a/Angular/byte-bank/src/app/app.component.html
+++ b/Angular/byte-bank/src/app/app.component.html
@@ -1,4 +1,2 @@
-<nova-transferencia (aoTransferir)="transferir($event)"></nova-transferencia>
-
-<p>Valor: {{transferencia?.valor}}</p>
-<p>Destino: {{transferencia?.destino}}</p>
+<app-nova-transferencia></app-nova-transferencia>
+<app-extrato></app-extrato>
