--- a/Angular/byte-bank/src/styles.scss
+++ b/Angular/byte-bank/src/styles.scss
@@ -6,6 +6,20 @@
   --cinza-claro: #dedede;
 }
 
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+a{
+  color: inherit;
+}
+
+.active {
+  display: none;
+}
+
 * {
   font-family: "Roboto", sans-serif;
 }
