--- a/Angular/byte-bank/src/app/app.component.html
+++ b/Angular/byte-bank/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-nova-transferencia></app-nova-transferencia>
-<app-extrato></app-extrato>
+<header>
+  <a routerLink="extrato">ByteBank</a>
+  <a routerLink="nova-transferencia" routerLinkActive="active">Nova Transferência</a>
+</header>
+<main>
+  <router-outlet></router-outlet>
+</main>
