--- a/Angular/angular-boas-praticas/gatito-book/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/Angular/angular-boas-praticas/gatito-book/src/app/componentes/cabecalho/cabecalho.component.html
@@ -1,8 +1,18 @@
 <header class="sticky-top">
   <nav class="navbar navbar-light bg-white">
-    <a class="navbar-brand">Gatito Book</a>
+    <a class="navbar-brand">
+      <i class="fa fa-bars mr-2" (click)="menu.abrirMenu()" (keyup.space)="menu.abrirMenu()"></i>
+      Gatito Book
+    </a>
+    <app-menu #menu>
+      <ul class="list-unstyled">
+        <li>
+          <a [routerLink]="['animais', 'novo']">Novo Animal</a>
+        </li>
+      </ul>
+    </app-menu>
     <div *ngIf="usuario$ | async as usuario">
-      <div *ngIf="usuario.name;else login">
+      <div *ngIf="usuario.name; else login">
         <i class="fa fa-user-circle mr-1">
           <a class="mr-1">{{ usuario.name }}</a>
           <a (click)="logout()">Logout</a>
