--- a/Angular/Acessibilidade/1980-a11y-parte2-73b3283b6c79ece59b4fd684e65d8afb404edc24/src/app/shared/components/modal/modal.component.html
+++ b/Angular/Acessibilidade/1980-a11y-parte2-73b3283b6c79ece59b4fd684e65d8afb404edc24/src/app/shared/components/modal/modal.component.html
@@ -4,6 +4,9 @@
   (keydown.esc)="modalRef.close()"
 >
   <div
+    role="dialog"
+    aria-modal="true"
+    [attr.aria-label]="config.title"
     appFocusTrap
     appFocusBack
     class="modal-content"
